@@ -9,6 +9,7 @@ Installation:
 Lib/
 * LDAPObject.unbind_ext() now removes class attribute
   LDAPObject._l to completely invalidate C wrapper object
+* added functions ldap.strf_secs() and ldap.strp_secs()
 
 Modules/
 * Fixed #69 Segmentation fault on whoami_s after unbind 
@@ -1260,4 +1261,4 @@ Released 2.0.0pre02 2002-02-01
 ----------------------------------------------------------------
 Released 1.10alpha3 2000-09-19
 
-$Id: CHANGES,v 1.379 2016/04/07 20:22:17 stroeder Exp $
+$Id: CHANGES,v 1.380 2016/07/17 15:12:58 stroeder Exp $
